--- a/.alexrc
+++ b/.alexrc
@@ -1,3 +1,12 @@
 {
-  "allow": ["hell", "crash", "execution", "execute", "executes", "special"]
+  "allow": [
+    "hell",
+    "crash",
+    "execution",
+    "execute",
+    "executes",
+    "special",
+    "pros",
+    "remain"
+  ]
 }
